- #212    --help should show help, not considered to be a tag
          (thanks to sruffel)
- #216    on-modify.timewarrior assumes python is python 3
          (thanks to somospocos, quazgar)
- #228    Using those date aliases don't function as intended
          (thanks to RainbowSwirls)
- #240    Core dump when specifying a start time in the past
          (thanks to OddBloke)
-         Fixed error from totals.py while timer is active
          (thanks to davisdude)
-         Refactoring of Interval and Range
-         Refactoring of CmdChart
-         Let command join merge tags of given intervals

------ current release ---------------------------

1.1.1 (2018-02-03) ef26ebd6fec8472d4b91644806f48b546bb35747

- TI-76   Shortening an interval over an exclusion makes the exclusion no longer apply
          (thanks to A M)
- TI-102  Exclusions stopped working
          (thanks to Christian Decker)

------ old release -------------------------------

1.1.0 (2018-01-13) 836bc41014018ab333e6ea73412ee09d015beb4e

- TD-120  Missing cmakedefine for HAVE_GET_CURRENT_DIR_NAME
          (thanks to Jörg Krause, Ben Boeckel).
- TW-1845 Cygwin build fails, missing get_current_dir_name
          (thanks to hosaka).
- TW-1936 Tweak tests to have fuller TAP compliance
          (thanks to Paul J. Fenwick)
- TI-27   Continue tracking by ID
          (thanks to Dennis Schubert)
- TI-29   timew config can't add new value
          (thanks to Yury Vidineev)
- TI-32   taskwarrior hook script doesn't stop recording waiting task
          (thanks to Yury Videneev).
- TI-39   Bogus command line option causes segfault
          (thanks to Jan Stolarek, Thomas Lauf).
- TI-40   totals.py extension script fails with an error
          (thanks to Jan Stolarek)
- TI-42   refresh holiday script throws an error on nb-NO locale
          (thanks to Jelle van der Waa).
- TI-43   :lastweek on sunday
          (thanks to Michel Crucifix).
- TI-46   Display error in visual reports (day,week,month)